[tool.poetry]
name = "langchain-vs-langgraph"
version = "0.1.0"
description = ""
authors = ["Manimaran"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
langchain-openai = "^0.2.8"
langgraph = "^0.2.46"
faiss-cpu = "^1.9.0"
langchain-community = "^0.3.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
