[tool.poetry]
name = "self-corrective rag"
version = "0.1.0"
description = ""
authors = ["Manimaran"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
langgraph = "^0.2.48"
python-dotenv = "^1.0.1"
chromadb = "^0.5.18"
langchain-openai = "^0.2.8"
langchain-community = "^0.3.7"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
